After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777930 - motioncells: fix mingw build
motioncells: fix mingw build
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Linux
: Normal normal
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-30 10:19 UTC by Nicola
Modified: 2017-01-30 10:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (931 bytes, patch)
2017-01-30 10:19 UTC, Nicola
committed Details | Review

Description Nicola 2017-01-30 10:19:39 UTC
Created attachment 344520 [details] [review]
patch

uint is not defined in mingw
Comment 1 Sebastian Dröge (slomo) 2017-01-30 10:38:29 UTC
commit 09835b3d2734107cb90554922c71b114f56cfc33
Author: Nicola Murino <nicola.murino@gmail.com>
Date:   Mon Jan 30 11:17:53 2017 +0100

    motioncells: fix mingw build
    
    https://bugzilla.gnome.org/show_bug.cgi?id=777930