motioncells: fix mingw build

https://bugzilla.gnome.org/show_bug.cgi?id=777930